--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -1,14 +1,169 @@
-body {
-  padding-top: 15px;
+body
+{
+  background-color: #1a1a1a;
 }
 
-.row {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: lightblue;
-  border: 1px solid midnightblue;
+./* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.col-md-3, .col-md-9 {
-  border-left: 1px solid darkcyan;
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #4e4e4e	;
+  color: #FFF;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 25%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close, .close2{
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus,
+.close2:hover,
+.close2:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #1a1a1a;
+  color: white;
+}
+
+.modal-body {
+	padding: 2px 16px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #1a1a1a;
+  color: white;
+}
+
+.erfolgreich{
+    color:#47ea15;
+}
+.container
+{
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px;
+  max-width: none;
+}
+
+.col
+{
+  font-size: 10px;
+  font-style: arial;
+  color: white;
+}
+
+.row [class^=col-]
+{
+  font-size: 10px;
+  font-style: arial;
+}
+
+.col-md-12
+{
+
+  height: auto;
+  min-height: 300px;
+  background-color: black;
+  border: 3px solid #2a2b2d;
+}
+
+.col-md-12 right
+{
+  height: auto;
+  min-height: 600px;
+  background-color: black;
+  border: 3px solid #2a2b2d;
+}
+
+.navbar
+{
+  border-radius: 0px 0px 4px 4px;
+  margin-bottom: 10px;
+}
+
+.nav-link
+{
+  color: darkgray !important;
+  border-radius: 8px;
+}
+
+.navbarText
+{
+  color: white;
+  height: 100%;
+  font-size: 40px;
+  margin-right: 5px;
+  padding-right: 5px;
+  border-right: 2px solid black;
+}
+
+.page-footer
+{
+  min-height: 50px;
+  max-height: 90px;
+  margin-top: 10px;
+
+  background-color: black;
+  border: 3px solid #2a2b2d;
+
+  color: white;
+  align-items: center;
+}
+
+a:hover
+{
+  background-color: rgba(255, 255, 255, 0.1);;
+  color: white !important;
+}
+
+img
+{
+  max-width: 100px;
+  max-height: 100px;
+  float: right;
 }
