--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -81,6 +81,23 @@ body
 .erfolgreich{
     color:#47ea15;
 }
+
+.login
+{
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #2a2b2d;
+  border-radius: 4px;
+  background-color: darkgray;
+  color: lightgray;
+}
+
+.login :hover
+{
+  background-color: rgba(255, 255, 255, 0.1);;
+  color: white !important;
+}
+
 .container
 {
   width: 75%;
@@ -88,7 +105,7 @@ body
   margin-right: auto;
   padding: 0px;
   max-width: none;
-  color: whiet;
+  color: white;
 }
 
 .col
