--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -142,6 +142,7 @@ body
 {
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .nav-link
@@ -187,6 +188,21 @@ body
 {
   background-color: rgba(255, 255, 255, 0.1);;
   color: white !important;
+}
+
+a
+{
+  float: right;
+}
+
+a:link
+{
+  color: white;
+}
+
+a:visited
+{
+  color: lightgray;
 }
 
 img
