--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -156,10 +156,10 @@ body
 {
   color: white;
   height: 100%;
-  font-size: 40px;
+  font-size: 30px;
   margin-right: 5px;
   padding-right: 5px;
-  border-right: 2px solid black;
+  border-left: 2px solid black;
 }
 
 footer
@@ -212,7 +212,7 @@ a:hover
 
 img
 {
-  max-width: 100px;
-  max-height: 100px;
-  float: right;
+  max-width: 50px;
+  max-height: 50px;
+  float: left;
 }
