--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -108,6 +108,68 @@ body
   color: white !important;
 }
 
+.delet
+{
+  min-height: 10px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  border: 1px solid #2a2b2d;
+  border-radius: 4px;
+
+  background-color: darkgray;
+  color: lightgray;
+
+  position: absolute;
+  bottom: 10px;
+  right: 5px;
+}
+
+
+.eingabein
+{
+  min-height: 20px;
+  min-width: 88%;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  border: 1px solid #2a2b2d;
+  border-radius: 4px;
+
+  background-color: darkgray;
+  color: lightgray;
+
+  position: absolute;
+  bottom: 30px;
+  right: 5px;
+}
+
+.eingabebu
+{
+  min-height: 20px;
+  min-width: 8%;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  border: 1px solid #2a2b2d;
+  border-radius: 4px;
+
+  background-color: darkgray;
+  color: lightgray;
+
+  position: absolute;
+  bottom: 30px;
+  left: 5px;
+}
+
+.delet:hover
+{
+  background-color: rgba(255, 255, 255, 0.1);;
+  color: white !important;
+}
 .container
 {
   width: 75%;
@@ -137,6 +199,7 @@ body
   min-height: 300px;
   background-color: black;
   border: 3px solid #2a2b2d;
+  position: relative;
 }
 
 .navbar
@@ -215,4 +278,10 @@ img
   max-width: 50px;
   max-height: 50px;
   float: left;
+}
+
+h5
+{
+  font-weight: bold;
+  border-bottom: 2px solid #2a2b2d;
 }
