design des eingabefelds für den Kommentar

--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -250,3 +250,13 @@ h5
   font-weight: bold;
   border-bottom: 2px solid #2a2b2d;
 }
+
+.eingabein
+{
+  width: 88%;
+}
+
+.eingabebu
+{
+  width: 10%;
+}
