--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -135,8 +135,10 @@ body
   margin-right: auto;
   border: 1px solid #2a2b2d;
   border-radius: 4px;
-  background-color: darkgray;
-  color: lightgray;
+  color: white; /* White text */
+  background-color: black;
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px;
 }
 
 .d-md-none:hover
