--- a/Code/tutorial.css
+++ b/Code/tutorial.css
@@ -247,11 +247,18 @@ img
   float: left;
 }
 
-h5
+h4
 {
   font-weight: bold;
   border-bottom: 2px solid #2a2b2d;
   display: block;
+}
+
+
+h3
+{
+  border-bottom: 2px solid white;
+  font-weight: bold;
 }
 
 .eingabein
